--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
