--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.45.7",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.560.0",
